--- a/miniprogram/components/tesla-picker/index.wxss
+++ b/miniprogram/components/tesla-picker/index.wxss
@@ -1,1 +1,11 @@
 /* components/tesla-picker/index.wxss */
+.picker {
+    position: relative;
+}
+.icon-down {
+    width: 32rpx;
+    height: 32rpx;
+    position: absolute;
+    right: 30rpx;
+    top: 105rpx;
+}
