--- a/miniprogram/pages/lenders-toolbox/index.wxss
+++ b/miniprogram/pages/lenders-toolbox/index.wxss
@@ -68,12 +68,40 @@
     align-items: center;
 }
 
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
 
 .float-card .product-box {
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
+    transition: all 1s;
+    height: 0;
+    opacity: 1;
+    animation: fadeOut 1s;
+}
+
+.float-card .product-box.collapse {
+    transition: all 1s;
+    height: 460rpx;
     margin-bottom: 80rpx;
+    animation: fadeIn 1s;
 }
 
 .float-card .product-box .product-image {
@@ -128,6 +156,15 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20rpx;
+    transition: all 1s;
+    height: 40rpx;
+}
+
+.float-card .calculate-box .calculate-item.hide {
+    height: 0;
+    overflow: hidden;
+    margin: 0;
+    transition: all 1s;
 }
 
 .float-card .calculate-box .calculate-item .label {
@@ -161,5 +198,19 @@
     font-size: 24rpx;
     line-height: 40rpx;
     color: #a4a4a5;
+    transition: all 1s;
+    height: 80rpx;
 }
 
+.float-card .tips.hide {
+    margin-top: 0;
+    height: 0;
+    overflow: hidden;
+    transition: all 1s;
+}
+
+.occupation-box {
+    width: 100%;
+    height: 410rpx;
+    display: block;
+}
