--- a/miniprogram/components/tesla-picker/index.wxml
+++ b/miniprogram/components/tesla-picker/index.wxml
@@ -1,4 +1,4 @@
-<picker class="picker" bindchange="onChange" value="{{ index }}" range="{{options}}">
-    <tesla-input writable="{{ false }}" required label="{{ label }}" value="{{ value }}"/>
+<picker class="picker" bindchange="onChange" value="{{ index }}" range="{{ optionList }}">
+    <tesla-input writable="{{ false }}" required label="{{ title }}" value="{{ value }}"/>
     <image class="icon-down" src="../../images/ic_arrow_down.svg" />
 </picker>
