--- a/miniprogram/pages/activity/detail.wxml
+++ b/miniprogram/pages/activity/detail.wxml
@@ -9,6 +9,7 @@
         <view class="date">{{ activity.start_time }} - {{ activity.end_time }}</view>
         <view wx:if="{{ activity.status === 'signing-up' }}" class="status-tag signing-up">报名中</view>
         <view wx:if="{{ activity.status === 'signing-end' }}" class="status-tag signing-end">报名结束</view>
+        <view wx:if="{{ activity.status === 'signed' }}" class="status-tag signed">已报名</view>
       </view>
       <view class="address">{{ activity.address }}</view>
 
@@ -23,7 +24,7 @@
       报名时间: {{ activity['start_time'] }} - {{ activity['end_time'] }} 
     </view>
 
-    <view class="activity-apply-btn" bindtap="apply" data-id="{{ activity._id }}">立即报名</view>
-
+    <view wx:if="{{ !activityCurrentUserApplication }}" class="activity-apply-btn" bindtap="apply" data-id="{{ activity._id }}">立即报名</view>
+    <view wx:if="{{ activityCurrentUserApplication }}" class="activity-apply-btn disable">已报名</view>
   </view>
 </view>
