feat: 完成咨询详情页

--- a/miniprogram/pages/discovery/index.wxml
+++ b/miniprogram/pages/discovery/index.wxml
@@ -1,15 +1,14 @@
 <view class="page">
   <view class="header">
-    <van-tabs color="#11151c" active="{{ active }}" bind:change="onChange">
-      <van-tab title="推荐"></van-tab>
-      <van-tab title="支持"></van-tab>
+    <van-tabs color="#11151c" active="{{ active }}" bind:change="onPageChange">
+      <van-tab wx:for="{{ pages }}" wx:key="index" title="{{ item }}"></van-tab>
       </van-tabs>
   </view>
 
-  <view class="swiper">
-    <swiper bindchange="onSwiperChange">
+  <view class="swiper" wx:if="{{ swiperList.length }}">
+    <swiper autoplay bindchange="onSwiperChange">
       <swiper-item wx:for="{{ swiperList }}" wx:key="index">
-        <image mode="aspectFill" class="image" src="{{ item.cover }}"></image>
+        <image mode="aspectFill" class="image" bindtap="navigatePage" data-type="{{ pageIndex === 0 ? 'article': 'channel' }}" data-target-id="{{ item._id }}" src="{{ item.cover }}"></image>
       </swiper-item>
     </swiper>
     <view class="dots">
@@ -17,27 +16,24 @@
     </view>
   </view>
 
-  <view class="list">
-    <view class="news-box">
+  <view wx:if="{{ articleList.length }}" class="article-list">
+    <view class="news-box" wx:for="{{ articleList }}" wx:key="index" bindtap="navigatePage" data-type="article" data-target-id="{{ item._id }}" >
       <view class="meta">
-        <view class="title">特斯拉迭代</view>
-        <view class="date">2021.12.5</view>
+        <view class="title">{{ item.title }}</view>
+        <view class="date">{{  }}</view>
       </view>
-      <image class="cover" src="../../images/tesla.jpeg"></image>
+      <image class="cover" src="{{ item.cover }}"></image>
     </view>
-    <view class="news-box">
-      <view class="meta">
-        <view class="title">特斯拉迭代</view>
-        <view class="date">2021.12.5</view>
+  </view>
+
+  <view wx:if="{{ channelList.length }}" class="channel-list">
+  <van-row gutter="20">
+    <van-col span="12" wx:for="{{ channelList }}" wx:key="index">
+      <view class="channel-box" bindtap="navigatePage" data-type="channel" data-target-id="{{ item._id }}">
+        <image class="cover" mode="aspectFill" src="{{ item.cover }}"></image>
+        <view class="title">{{ item.title }}</view>
       </view>
-      <image class="cover" src="../../images/tesla.jpeg"></image>
-    </view>
-    <view class="news-box">
-      <view class="meta">
-        <view class="title">特斯拉迭代</view>
-        <view class="date">2021.12.5</view>
-      </view>
-      <image class="cover" src="../../images/tesla.jpeg"></image>
-    </view>
+    </van-col>
+  </van-row>
   </view>
 </view>
