--- a/miniprogram/pages/discovery/index.wxss
+++ b/miniprogram/pages/discovery/index.wxss
@@ -57,13 +57,13 @@ image {
 }
 
 
-.list {
+.article-list {
   display: flex;
   flex-direction: column;
   width: 100%;
 }
 
-.list .news-box {
+.article-list .news-box {
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -71,19 +71,45 @@ image {
   margin-bottom: 54rpx;
 }
 
-.list .news-box .cover {
+.article-list .news-box .cover {
   width: 182rpx;
   height: 128rpx;
 }
 
-.list .news-box .title {
+.article-list .news-box .title {
   margin-top: 7rpx;
   font-size: 26rpx;
   font-weight: bold;
   margin-bottom: 24rpx;
 }
 
-.list .news-box .date {
+.article-list .news-box .date {
   font-size: 16rpx;
   color: #a5a5a5;
+}
+
+
+.channel-list {
+  width: 100%;
+}
+
+.channel-box {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 60rpx;
+}
+
+.channel-box .cover {
+  width: 312rpx;
+  height: 214rpx;
+  border-radius: 10rpx;
+  overflow: hidden;
+  margin-bottom: 20rpx;
+}
+
+.channel-box .title {
+  font-size: 26rpx;
+  font-weight: bold;
 }
